[Mod] start.sh